Add latest jdk (#123)
* Copyright fixes

Signed-off-by: Jorge Bescos Gascon <jorge.bescos.gascon@oracle.com>